--- a/style.scss
+++ b/style.scss
@@ -6,10 +6,14 @@
 
 header{
     background-color: #f2f2f2;
+    transition: background 2s;
+}
+header:hover{
+    background: #feab12;
 }
 .wrapper{
     width:1290px;
-    // border:1px solid red;
+    border:1px solid red;
     margin: 0 auto;
 }
 .top{
@@ -63,10 +67,14 @@ header{
 }
 .menu1 li:hover {
     @include scale(1.2);
+    transition: 2s;
 }
 .img{
     position: absolute;
     left: 42%;
+    a{
+        display: block;
+    }
 }
 .icons{
     @include flexbox();
@@ -74,6 +82,7 @@ header{
     left: 73%;
     a{
     padding: 0px 5px; 
+    display: block;
     }
 }
 .menu2{
@@ -94,13 +103,19 @@ header{
     }
 }
 .menu2_sub_menu:hover .sub_menu{
-    display:block;
+    // display:block;
+    opacity: 1;
+    visibility: visible;
 }
 .sub_menu{
     background-color: #242424;
     position: absolute;
     width: 112px;
-    display: none;
+    // display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition-property: opacity, visibility;
+    transition-duration: 1s;
     a{
         padding: 0px 5px 0px 55px;
     }
@@ -121,13 +136,24 @@ header{
         position: absolute;
         left: 0px;
         top: 270px;
+        animation: mymove2 2s infinite linear;
     }
     .right-arrow{
         position: absolute;
         right: 0px;
         top: 270px;
+        animation: mymove 2s infinite linear;
     }
 }
+
+@keyframes mymove {
+    from {right: 0px;}
+    to {right: 30px;}
+  }
+@keyframes mymove2 {
+    from {left: 0px;}
+    to {left: 30px;}
+  }
 .sale{
     width:275px;
     height: 275px;
@@ -139,6 +165,10 @@ header{
     @include justify-content(center);
     @include align-items(center);
     cursor: pointer;
+}
+.sale:hover{
+    border-radius: 50%;
+    transition-duration: 1s;
 }
 table{
     width: 265px;
@@ -215,6 +245,7 @@ button{
 }
 button a:hover{
     color: black;
+    transition: 2s;
 }
 .scroll {
     @include flexbox();
@@ -305,6 +336,9 @@ button a:hover{
         }
     }
 }
+.sum span:hover{
+    color:brown;
+}
 .sum:before{
     content:url(./images/summer.png);
     position: absolute;
@@ -382,6 +416,7 @@ button a:hover{
 
 .grid-item1:hover{
     opacity: 1;
+    transition: 2s;
 }
 .grid-item1:hover .heart{
     display: block;
@@ -391,6 +426,7 @@ button a:hover{
 }
 .trap:hover{
     border-bottom: 40px solid #feab12;
+    transition: 2s;
 }
 footer{
     background-color:#141414;
@@ -501,46 +537,15 @@ input[type="submit"]{
         height: 20px;
     }
 }
-// .div280{
-//     width:278px;
-//     height: 278px;
-//     border:3px solid black;
-//     position: absolute;
-// }
-// table{
-//     width: 270px;
-//     height: 270px;
-//     td{
-//         border:1px solid black;
-//         padding-top:20px;
-//         .p1{
-//             font-size: 20px;
-//             font-family: Lato;
-//             text-align: center;
-//         }
-//         .p2{
-//             font-size: 58px;
-//             @extend .p1;
-//         }
-//         .p3{
-//             @extend .p1;
-//         }
-//         .p4{
-//             @extend .p1;
-//             text-align: end;
-//         }
-//         .p5{
-//             font-size: 20px;
-//             font-family: Lato;
-//         }
-//         .p6{
-//             text-align: end;
-//         }
-//         .w60{
-//             width:60px;
-//         }
-//     }
-// }
+.top2:hover{
+    animation: mymove3  infinite 5s linear;
+    // animation-delay: 2s;
+}
+@keyframes mymove3 {
+from {top: 140px;}
+to {top: 30px;}
+}
+
 
 
 
