--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@ header:hover{
 .wrapper{
     width:1290px;
     margin: 0 auto;
+    // border:1px solid green;
 }
 .top{
     @include flexbox();
